[FIX] web: Notifications z-index
The notifications appeared below the dialogs.

--- a/web/static/src/less/webclient.less
+++ b/web/static/src/less/webclient.less
@@ -186,7 +186,7 @@ select { // FIXME buggy 'padding-left'
     max-width: 100%;
 
     .o-position-absolute(@navbar-height, 0px);
-    z-index: 50;  // same as debug manager. Fixme: expose a variable
+    z-index: 1100; // Bootstrap modal z-index is 1050
 
     .o_notification {
         padding: 0;
